manifests/classes.yaml
# Used in examples, should be auto-created
# Describe should show Status with Reason:Accepted,Type:Accepted
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
# Testing a new class
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: mesh
spec:
  controllerName: istio.io/gateway-controller
---
# Alias
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: ingress
spec:
  controllerName: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: egress
spec:
  controllerName: istio.io/gateway-controller
