manifests/local.yaml
# Manifest for local debug
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-local
  name: echo-local
  namespace: test
spec:
  selector:
    app: echo-local
  type: ClusterIP

  ports:
    - name: grpc
      port: 9080
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: echo-local
  namespace: test
  labels:
    kubernetes.io/service-name: echo-local
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9080
endpoints:
  - addresses:
      # Loopback range not allowed
      - "10.1.10.228"
    conditions:
      ready: true
    hostname: echo
    nodeName: node-1
    zone: us-west2-a
