manifests/gke-gateway.yaml
# https://cloud.google.com/kubernetes-engine/docs/concepts/gateway-api
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: gke-internal
  namespace: istio-system
spec:
  # Regional ILB
  # Also gke-l7-rilb-mc for multicluster
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      name: http
      port: 80
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: gke-ingress
  namespace: istio-system
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
    - protocol: HTTP
      port: 80
      name: http
    - protocol: HTTPS
      name: https
      hostname: istiod.svc.i.webinf.info
      # Does not allow 8443, only 443
      port: 443
      tls:
        mode: Terminate

        certificateRefs:
          - kind: Secret
            group: v1
            name: cert-istiod
