manifests/mesh-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  namespace: echo-grpc
  name: echo-grpc
spec:
  gatewayClassName: mesh
